syntax = "proto3";

option csharp_namespace = "LGDXRobot2Cloud.Protos";

service RobotClientService {
  rpc Greet (RpcGreet) returns (RpcRespond);
  rpc Exchange (RpcExchange) returns (RpcRespond);
  rpc AutoTaskNext (RpcNextToken) returns (RpcRespond);
  rpc AutoTaskAbort (RpcNextToken) returns (RpcRespond);
}

/*
** Common
*/
enum RpcRobotStatus {
  Idle = 0;
  Running = 1;
  Paused = 2;
  Critical = 3;
  Charging = 4;
  Offline = 5;
}

enum RpcRobotCriticalStatus {
  HardwareEmergencyStopsEnabled = 0;
  SoftwareEmergencyStopsEnabled = 2;
  BatteryLow = 4;
  MotorDamaged = 8;
}

enum RpcResultStatus {
  Success = 0;
  Failed = 1;
}

message RpcRobotDof {
  double X = 1;
  double Y = 2;
  double W = 3;
}

message RpcRobotCommand {
  optional bool SoftwareEmergencyStopsEnable = 1;
  optional bool PauseTaskAssigement = 2;
  optional bool RenewCertificate = 3;
}

message RpcAutoTask {
  int32 TaskId = 1;
  string TaskName = 2;
  int32 TaskProgressId = 3;
  string TaskProgressName = 4;
  repeated RpcRobotDof Waypoints = 5;
  string NextToken = 6;
}

message RpcRespond {
  RpcResultStatus Status = 1;
  string Message = 2;
  optional RpcRobotCommand Commands = 3;
  optional RpcAutoTask Task = 4;
}

/*
** Greet
*/
message RpcRobotSystemInfo {
  string Cpu = 1;
  bool IsLittleEndian = 2;
  int32 RamMiB = 3;
  string Gpu = 4;
  string Os = 5;
  bool Is32Bit = 6;
}

message RpcRobotChassisInfo {
  int32 RobotTypeId = 1;
  double ChassisLX = 2;
  double ChassisLY = 3;
  int32 ChassisWheelCount = 4;
  double ChassisWheelRadius = 5;
  int32 BatteryCount = 6;
  double BatteryMaxVoltage = 7;
  double BatteryMinVoltage = 8;
}

message RpcGreet {
  RpcRobotSystemInfo SystemInfo = 1;
}

/*
** Exchange
*/

message RpcAutoTaskNavProgress {
  double Eta = 1;
  int32 Recoveries = 2;
  double DistanceRemaining = 3;
  int32 WaypointsRemaining = 4;
}

message RpcExchange {
  RpcRobotDof Position = 1;
  RpcAutoTaskNavProgress NavProgress = 2;
  repeated double Batteries = 3;
  int32 CriticalStatus = 4;
  bool GetTask = 5;
  RpcRobotCommand CommandsAck = 6;
}

message RpcNextToken {
  int32 TaskId = 1;
  string NextToken = 2;
}